Spacing Fixed
Fixed sizing of divs causing overflow

--- a/styles/curriculum.css
+++ b/styles/curriculum.css
@@ -2,7 +2,7 @@
     background-color: #13467F;
 
     height: 30vh;
-    width: 100vw;
+    width: auto;
 }
 
 #caption {
@@ -10,7 +10,9 @@
 
     color: white;
 
-    padding: 4rem 1rem 1rem;
+    padding: 4rem 0 1rem;
+
+    width: auto;
 
     text-align: center;
 }
@@ -20,14 +22,16 @@
 
     color: #ffb20d;
 
-    padding: 2rem;
+    padding: 2rem 0 1rem;
+
+    width: auto;
 
     text-align: center;
 }
 
 #cr-segment {
     height: 60vh;
-    width: 100vw;
+    width: auto;
 
     font-size: 20px;
 }
